# cppCudaPhysicsSim

./: CMakeLists.txt  README.md
.github/workflows/: ci.yml
src/: CMakeLists.txt
src/core/: simulation.h
src/models/: free_fall_simulation.cpp  free_fall_simulation.h
src/utils/: logger.cpp  logger.h
tests/: CMakeLists.txt  test_free_fall_simulation.cpp  test_main.cpp
